# TE3002B_mcrChallenge

./: .gitignore  .gitmodules  README.md  SESSION_SUMMARY.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
cam_calibration/: auto_calibrate.py  calibrate.py  generate_checkerboard.py  usb_module_cam_calibration.yaml  usc_cam_calibration.yaml
config/: config_live.json
pzb_ros/: HANDOVER_CPP_PORT.md
pzb_ros/pzb_stale/: metadata.yaml  pzb_stale_0.db3
pzb_ros/src/pzb_camera/: README.md  package.xml  setup.cfg  setup.py
pzb_ros/src/pzb_camera/config/: cam_calibration.sh  camera_info_8x5_3cm.yaml  camera_params.yaml
pzb_ros/src/pzb_camera/launch/: camera.launch.py  image_decompressor.launch.py
pzb_ros/src/pzb_camera/resource/: pzb_camera
pzb_ros/src/pzb_camera/scripts/: calibrate_from_rosbag.py  camera_compressed_publisher.py  camera_publisher.py  camera_raw_publisher.py  image_decompressor.py  usb_camera_publisher.py
pzb_ros/src/pzb_control/: README.md  package.xml  setup.cfg  setup.py
pzb_ros/src/pzb_control/config/: closed_loop_params.yaml  mini_challenge_params.yaml  mini_challenge_sequence.yaml  open_loop_params.yaml  open_loop_sequence.yaml  pid_vel_params.yaml
pzb_ros/src/pzb_control/launch/: closed_loop.launch.py  mini_challenge.launch.py  open_loop_controller.launch.py  pid_velocity_ctrl_only.launch.py  pid_waypoint_mission.launch.py  velocity_ctrl_only.launch.py  waypoint_mission.launch.py
pzb_ros/src/pzb_control/scripts/: mini_challenge_ctrl.py  odometry_node.py  open_loop_controller.py  velocity_controller.py  waypoint_follower.py
pzb_ros/src/pzb_ibvs/: package.xml  setup.cfg  setup.py
pzb_ros/src/pzb_ibvs/config/: mpc_ibvs_params.yaml
pzb_ros/src/pzb_ibvs/launch/: detect_only.launch.py  mpc_ibvs.launch.py  mpc_ibvs_pc.launch.py  mpc_ibvs_robot.launch.py
pzb_ros/src/pzb_ibvs/resource/: pzb_ibvs
pzb_ros/src/pzb_ibvs/scripts/: generate_aruco.py  mpc_ibvs_node.py  simulate_mpc_closed_loop.py  validate_dead_zone.py  validate_interaction_matrix.py  visual_detector_node.py
pzb_ros/src/pzb_line_follower/: package.xml  setup.cfg  setup.py
pzb_ros/src/pzb_line_follower/config/: line_follower_params.yaml
pzb_ros/src/pzb_line_follower/config/sign_actions/: README.md  left.csv  right.csv  straight.csv
pzb_ros/src/pzb_line_follower/launch/: line_follower.launch.py
pzb_ros/src/pzb_line_follower/resource/: pzb_line_follower
pzb_ros/src/pzb_line_follower/scripts/: center_line_detector.py  line_follower_node.py
pzb_ros/src/pzb_line_follower_cpp/: CMakeLists.txt  package.xml
pzb_ros/src/pzb_line_follower_cpp/include/pzb_line_follower_cpp/: bag_reader.hpp  center_line_detector.hpp  follower_core.hpp
pzb_ros/src/pzb_line_follower_cpp/src/: bag_reader.cpp  center_line_detector.cpp  detector_dump_main.cpp  follower_core.cpp  line_follower_node.cpp  replay_follower_main.cpp
pzb_ros/src/pzb_traffic/: package.xml  setup.cfg  setup.py
pzb_ros/src/pzb_traffic/config/: traffic_params.yaml  yolo_params.yaml
pzb_ros/src/pzb_traffic/launch/: traffic_challenge.launch.py  traffic_challenge_pc.launch.py  traffic_challenge_robot.launch.py  yolo_detector.launch.py
pzb_ros/src/pzb_traffic/scripts/: color_detector_node.py  traffic_light_fsm_node.py  yolo_detector_node.py
pzb_ros/src/pzb_traffic_cpp/: CMakeLists.txt  package.xml
pzb_ros/src/pzb_traffic_cpp/src/: color_detector_node.cpp
pzb_ros/src/pzb_utils/: package.xml  setup.cfg  setup.py
pzb_ros/src/pzb_utils/launch/: emergency_stop.launch.py  teleop_pid.launch.py
pzb_ros/src/pzb_utils/scripts/: emergency_stop.py  twist_slew_limiter.py
pzb_ros/yolo_not_yoloing/: metadata.yaml
scripts/: bag_to_video.py  detector_dump_py.py  node_dump_py.py  run_yolo.sh
