<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelang="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pzb_line_follower_cpp</name>
  <version>0.1.0</version>
  <description>
    C++ port of the line follower (center_line_detector + line_follower_node).
    Parallel to the Python pzb_line_follower; drop-in via the same node name, topics
    and parameters. Built to cut on-Jetson CPU/memory. Includes an offline rosbag
    comparator (replay_follower) that validates parity against recorded /line_follower/*.
  </description>
  <maintainer email="sonidavid46@gmail.com">SoniDavid</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>
  <depend>sqlite3</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
