<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelang="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pzb_traffic_cpp</name>
  <version>0.1.0</version>
  <description>C++ port of the HSV traffic-light color_detector_node. Drop-in for the
    Python pzb_traffic color detector (same node name, params, topics).</description>
  <maintainer email="sonidavid46@gmail.com">SoniDavid</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>libopencv-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
